# api-proxy

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
certs/: server-cert.pem  server-key.pem
config/: routes.json
dashboard/: app.js  index.html  style.css
db/: schema.sql
docs/: architecture.md  design-descisions.md  roadmap.md
include/: cache.hpp  http-request.hpp  json.hpp  logger.hpp  logging.hpp  rate-limiter.hpp  router.hpp  server.hpp  sql-logger.hpp  thread-pool.hpp
src/: http-request.cpp  main.cpp  router.cpp  server.cpp
src/caching/: cache.cpp
src/logging/: logger.cpp  logging.cpp  sql-logger.cpp
src/proxy/: http-request.cpp  router.cpp  server.cpp  thread-pool.cpp
src/rate-limiting/: rate-limiter.cpp
